--- a/app/src/main/res/layout/activity_poke_info.xml
+++ b/app/src/main/res/layout/activity_poke_info.xml
@@ -31,6 +31,8 @@
         android:id="@+id/poke_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="50dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -39,11 +41,12 @@
         android:id="@+id/back_icon"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="330dp"
         android:layout_marginLeft="30dp"
         android:visibility="gone"
         android:src="@drawable/ic_baseline_reply_24"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
 
@@ -59,6 +62,17 @@
         app:lottie_autoPlay="true"
         app:lottie_fileName="swablu.json"
         app:lottie_loop="true" />
+
+
+
+
+        <include
+            android:id="@+id/the_bottom_sheet"
+            layout="@layout/bottom_sheet"/>
+
+
+
+
 
 
 
