--- a/app/src/main/res/drawable/bottom_sheet_shape.xml
+++ b/app/src/main/res/drawable/bottom_sheet_shape.xml
@@ -6,5 +6,8 @@
     <corners
         android:topRightRadius="25dp"
         android:topLeftRadius="25dp"/>
+    <stroke
+        android:color="#CAB70D"
+        android:width="3dp"/>
 
 </shape>
